--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,10 @@
+:root{
+  --secondary-color:#020201;
+  --primary-color:white;
+}
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +17,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+footer{
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
 }
